# ecommerce-oltp-pipeline

./: README.md  pyproject.toml
src/project3_poetry/: connect.py  create_tables.py  insert.py  insert_orders.py
